chore(swag): use apiKey
swagger is no longer available in the production environment
